<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form_rounded"
        android:hint="@string/username"
        android:padding="15dp"
        android:singleLine="true" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/edtFullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form_rounded"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="15dp" />


    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form_rounded"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/edtReTypePassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form_rounded"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/signup"
        android:textColor="@android:color/white" />
</LinearLayout>